<resources>
    <string name="app_name">星配送</string>

    <string name="find_password">找回密码</string>
    <string name="phone_or_name">手机号/用户名</string>
    <string name="phone">手机号</string>
    <string name="send_user_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="password">密码</string>
    <string name="sure_password">确认密码</string>
    <string name="sure">确认</string>
    <string name="forget_password">忘记密码？</string>
    <string name="password_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="login">登录</string>
    <string name="no_account">还没有账号，</string>
    <string name="go_register">快去注册吧</string>
    <string name="base_info">基本信息</string>
    <string name="car_info">车辆信息</string>
    <string name="back_check">后台审核</string>
    <string name="please_upload_head">请上传真实头像</string>
    <string name="please_input_name">请输入真实姓名</string>
    <string name="please_input_identify">请输入身份证号码</string>
    <string name="please_input_bank_number">请输入本人银行卡号</string>
    <string name="please_input_bank_address">请输入银行卡开户行</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_code">请输入手机验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="password_not_equal">密码输入不一致</string>
    <string name="phone_error">手机号输入错误</string>
    <string name="identify_error">身份证号码输入错误</string>
    <string name="bank_error">银行卡号输入错误</string>
    <string name="please_read_and_agree">请阅读并同意《星配送物流平台合作协议》</string>
    <string name="please_read_first">请先阅读《星配送物流平台合作协议》</string>
    <string name="please_input_phone_pass">请输入账号和密码</string>
    <string name="please_input_phone_code">请输入账号和验证码</string>
    <string name="please_choice">请选择</string>
    <string name="please_select_class">请勾选班次</string>
    <string name="has_read_and_agree">已阅读并同意</string>
    <string name="send_success">发送成功</string>
    <string name="xin_logistics_protocol">《星配送物流平台合作协议》</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="take_licenseA">拍摄驾驶证主页</string>
    <string name="take_licenseB">拍摄驾驶证副页</string>
    <string name="please_wait">请耐心等待......</string>
    <string name="is_checking">已提交，审核中</string>
    <string name="truck_num">车牌</string>
    <string name="truck_type">车型</string>
    <string name="truck_weight">载重</string>
    <string name="truck_cure">保险</string>
    <string name="truck_drive">行驶证</string>
    <string name="truck_cure_id">保单</string>
    <string name="truck">车辆</string>
    <string name="other">其他</string>
    <string name="take_driveA">行驶证正面</string>
    <string name="take_driveB">行驶证反面</string>
    <string name="go_on_add">继续添加车辆</string>
    <string name="take_cure">保单照片</string>
    <string name="truck_foreword">车辆正面</string>
    <string name="truck_left">车辆左侧面</string>
    <string name="truck_right">车辆右侧面</string>
    <string name="other_info">其他信息</string>
    <string name="no_data">暂无数据</string>
    <string name="select_type">选择车型</string>
    <string name="input_drive_number">请输入车牌</string>
    <string name="choice_cure_time">请选择保险时间</string>
    <string name="upload_drive">请上传行驶证</string>
    <string name="upload_cure">请上传保单</string>
    <string name="upload_truck">请上传车辆照片</string>

    <string name="search">查询</string>
    <string name="order_number">订单号</string>
    <string name="receive_order">接单</string>
    <string name="print_order">打单</string>
    <string name="clock_in">考勤打卡</string>
    <string name="all_service">全部服务</string>
    <string name="the_news">最新资讯</string>
    <string name="clock_tip">愉快的一天又开始啦\n准备上班啦！</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="notify_center">消息中心</string>
    <string name="news">新闻资讯</string>
    <string name="news_detail">新闻详情</string>
    <string name="order_center">订单中心</string>
    <string name="order_detail">订单详情</string>
    <string name="all_orders">全部运单</string>
    <string name="order_hint">运单号/车牌号/发货手机号/司机姓名</string>
    <string name="lines_hint">起点/终点</string>
    <string name="check_all">查看全部 ></string>
    <string name="wait_receive">待接单</string>
    <string name="wait_send">待出发</string>
    <string name="sending">配送中</string>
    <string name="complete">已完成</string>
    <string name="has_cancel">已取消</string>
    <string name="receive_time">剩余接单时间</string>
    <string name="sure_receive">确认接单</string>
    <string name="go_now">立即出发</string>
    <string name="change_order">订单修改</string>
    <string name="change_allot">改派</string>
    <string name="sure_change">确认修改</string>
    <string name="complete_send">配送完成</string>
    <string name="type">品类</string>
    <string name="weight">重量</string>
    <string name="freight">运费</string>
    <string name="total">件数</string>
    <string name="receive_c_time">接单时间：</string>
    <string name="pay_way">支付方式：</string>
    <string name="vip_service">增值服务：</string>
    <string name="logistics_way">物流产品：</string>
    <string name="logistics_company">承运公司：</string>
    <string name="logistics_company_b">物流公司</string>
    <string name="logistics_product">物流产品</string>
    <string name="driver_info">司机信息：</string>
    <string name="car_number">运输车牌：</string>
    <string name="remark">备注：</string>
    <string name="locate_tip">车辆即将出发，请打开GPS\n定位系统进入导航状态\n请安全驾驶！</string>
    <string name="set">设置</string>
    <string name="sure_to_receive">是否确认接单</string>
    <string name="check_new_update">检查到新版本，是否更新？</string>
    <string name="cancel">取消</string>
    <string name="real_pay">实收运费</string>
    <string name="pay_online">线上支付</string>
    <string name="pay_crash">线下支付</string>s
    <string name="select_all">全选</string>
    <string name="sure_pay">确认收款</string>
    <string name="new_client_back">客户回执</string>
    <string name="print_detail">打印详情</string>
    <string name="count">统计</string>
    <string name="word">客户评价</string>
    <string name="change">修改资料</string>
    <string name="shifts">我的班次</string>
    <string name="customer">联系客服</string>
    <string name="check_update">检查更新</string>
    <string name="clean_cache">清除缓存</string>
    <string name="private_stage">隐私策略</string>
    <string name="out_login">退出登录</string>
    <string name="version">版本</string>
    <string name="version_update">版本更新</string>
    <string name="update_content">更新内容:</string>
    <string name="downloading">下载中，请稍候...</string>
    <string name="update_immediately">立即更新</string>
    <string name="now_version">当前版本</string>
    <string name="all_score">总评分</string>
    <string name="service_manner">服务态度</string>
    <string name="arrive_time">按时到达</string>
    <string name="goods_intact">货物完整</string>
    <string name="evaluate">评价</string>
    <string name="car_and_lines">车辆及路线</string>
    <string name="this_month">今日运单</string>
    <string name="this_day">今日运费</string>
    <string name="this_other_month">今日到付(线下)</string>
    <string name="bill_statistics">运单统计</string>
    <string name="statistics">统计</string>
    <string name="free_statistics">运费统计</string>
    <string name="other_statistics">运费到付</string>
    <string name="add_all">共计</string>
    <string name="to">至</string>
    <string name="header_up_real">头像(请上传真实头像)</string>
    <string name="name">姓名</string>
    <string name="change_phone">修改手机号</string>
    <string name="change_password">修改密码</string>
    <string name="change_success">修改成功</string>
    <string name="truck_manager">车辆管理</string>
    <string name="input_new_phone">输入新手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="driving">驾驶证</string>
    <string name="changes">修改</string>
    <string name="re_upload">重新上传</string>
    <string name="save">保存</string>
    <string name="upload_driving_A">请上传驾驶证主页照</string>
    <string name="upload_driving_B">请上传驾驶证副页照</string>

    <string name="choice_printer">选择打印机</string>
    <string name="not_support">设备不支持蓝牙</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="str_interface_undefine">接口：未设定</string>
    <string name="str_select_printer_id">选中id为{0}的打印机</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string name="change_free">修改运费</string>
    <string name="yuan">元</string>


    <string name="waybill_manage">运单管理</string>
    <string name="logistics_center">物流中心</string>
    <string name="company_center">公司中心</string>
    <string name="wait_allot_order">待派单</string>
    <string name="classes_manage">班次管理</string>
    <string name="wait_print_order">待打单</string>
    <string name="allot">派单</string>
    <string name="sure_allot">确认派单</string>
    <string name="logistics_move">物流动态</string>
    <string name="lines_manage">路线管理</string>
    <string name="today_bans">今日班次</string>
    <string name="send_complete">配送完成</string>
    <string name="start">起点</string>
    <string name="end">终点</string>
    <string name="fee_standard">收费标准</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="add">增加</string>
    <string name="send_time">出发时间</string>
    <string name="arrive_time_a">到达时间</string>
    <string name="driver">司机</string>
    <string name="driver_name">司机姓名</string>
    <string name="manager">管理员</string>
    <string name="fee_checking">运费核算</string>
    <string name="run_table">运营总表</string>
    <string name="driver_words">司机评价</string>
    <string name="way_bill_number">运单数</string>
    <string name="brokerage">佣金</string>
    <string name="index">首页</string>
    <string name="mine_center">个人中心</string>
    <string name="check_logistics">查看物流</string>

    <string name="type_price">品类价格</string>
    <string name="all_lines">总线路</string>
    <string name="receive_diver">承运司机</string>
    <string name="car_id">车牌号</string>
    <string name="class_list">班次列表</string>
    <string name="complete_btn">完成</string>
    <string name="quantity_set">批量设置</string>
    <string name="quantity_class_manage">批量管理班次</string>

</resources>
