<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >
    <Button
        android:id="@+id/view_button_print"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:text="@string/print_order"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/shape_5dp_a45b"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        />
    <Button
        android:id="@+id/view_button_change"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_30"
        android:text="@string/change_order"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/shape_5dp_a45b"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_6"

        />
    <Button
        android:id="@+id/view_button_complete"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_30"
        android:text="@string/sure_pay"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/shape_5dp_a45b"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_6"
        />
    <Button
        android:id="@+id/view_button_resend"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:text="@string/allot"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/shape_5dp_a45b"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_6"
        />
</LinearLayout>