<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/dp_325"
        android:layout_height="@dimen/dp_325"
        android:src="@mipmap/dialog_receive_tip"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_new_update"
        android:textColor="@color/color_703f"
        android:textSize="@dimen/sp_17"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_update_no"
        android:layout_marginBottom="@dimen/dp_60"
        />
    <TextView
        android:id="@+id/dialog_update_no"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:text="@string/no"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/shape_right_b87a"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_update_yes"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/dp_26"
        />
    <TextView
        android:id="@+id/dialog_update_yes"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:text="@string/yes"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/shape_left_a45b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dialog_update_no"
        android:layout_marginBottom="@dimen/dp_26"
        />
</android.support.constraint.ConstraintLayout>