<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="@dimen/dp_325"
        android:layout_height="@dimen/dp_325"
        android:src="@mipmap/change_money"
        />
    <TextView
        android:id="@+id/change_money_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_free"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/change_money_input"
        />
    <EditText
        android:id="@+id/change_money_input"
        android:layout_width="@dimen/dp_102"
        android:layout_height="@dimen/dp_30"
        android:text="0"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        android:gravity="center"
        android:maxLength="8"
        android:inputType="number"
        android:background="@drawable/shape_3dp_703f"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/change_money_word1"
        app:layout_constraintRight_toLeftOf="@+id/change_money_word2"
        android:layout_marginLeft="@dimen/sp_12"
        android:textCursorDrawable="@drawable/shape_input_cur"
        />
    <TextView
        android:id="@+id/change_money_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/change_money_input"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/dp_8"
        />
    <Button
        android:id="@+id/change_money_cancel"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_3333"
        android:background="@drawable/shape_right_cccc"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_money_input"
        app:layout_constraintRight_toLeftOf="@+id/change_money_sure"
        android:layout_marginTop="@dimen/dp_56"
        />
    <Button
        android:id="@+id/change_money_sure"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:text="@string/sure"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:background="@drawable/shape_left_a45b"
        app:layout_constraintLeft_toRightOf="@id/change_money_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_money_input"
        android:layout_marginTop="@dimen/dp_56"
        />
</android.support.constraint.ConstraintLayout>