<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="@dimen/dp_12"
    android:layout_marginLeft="@dimen/dp_12"
    android:background="@drawable/shape_2dp_ffff"
    android:padding="@dimen/dp_10">
    <TextView
        android:id="@+id/change_dan_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freight"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_6666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/change_dan_cMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="￥200(到付)"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/change_dan_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_6666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_word1"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/change_dan_cType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="冷冻食品"
        android:textColor="@color/color_cccc"
        android:textSize="@dimen/sp_14"
        app:layout_constraintRight_toLeftOf="@+id/change_dan_down"
        app:layout_constraintTop_toBottomOf="@id/change_dan_cMoney"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_6"
        />
    <ImageView
        android:id="@+id/change_dan_down"
        android:layout_width="@dimen/dp_10"
        android:layout_height="@dimen/dp_10"
        android:src="@mipmap/arrows_down"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_cMoney"
        android:layout_marginTop="@dimen/dp_14"
        />
    <TextView
        android:id="@+id/change_dan_word3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_6666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_word2"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/change_dan_cWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="44kg"
        android:textColor="@color/color_cccc"
        android:textSize="@dimen/sp_14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_cType"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/change_dan_word4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_6666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_word3"
        android:layout_marginTop="@dimen/dp_10"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/change_dan_count_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/change_dan_word4"
        app:layout_constraintTop_toBottomOf="@id/change_dan_cWeight"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_50"
        ></android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/change_dan_word5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_free"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/change_dan_count_list"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        />
    <EditText
        android:id="@+id/change_dan_input_free"
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_30"
        android:text="0"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/shape_3dp_f5f5"
        android:gravity="center"
        android:maxLength="7"
        app:layout_constraintRight_toLeftOf="@+id/change_dan_word6"
        app:layout_constraintTop_toBottomOf="@id/change_dan_count_list"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_6"
        android:textCursorDrawable="@drawable/shape_input_cur"
        />
    <TextView
        android:id="@+id/change_dan_word6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_dan_count_list"
        android:layout_marginTop="@dimen/dp_30"
        />
</android.support.constraint.ConstraintLayout>