<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/dp_12"
    android:layout_marginLeft="@dimen/dp_12"
    android:background="@drawable/shape_2dp_ffff"
    android:padding="@dimen/dp_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/normal_down_word11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_c_time"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/normal_down_rTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2019.05.26 13:30:23"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word11"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/normal_down_word12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_way"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word11"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_pay_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="线下支付"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word12"
        app:layout_constraintTop_toBottomOf="@id/normal_down_rTime"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_word13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip_service"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word12"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_vip_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="上门取货"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word13"
        app:layout_constraintTop_toBottomOf="@id/normal_down_pay_way"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_word14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logistics_way"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word13"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_logistics_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="城市配送"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word14"
        app:layout_constraintTop_toBottomOf="@id/normal_down_vip_service"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_word15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logistics_company"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word14"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_logistics_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="齐天大圣孙悟空"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word15"
        app:layout_constraintTop_toBottomOf="@id/normal_down_logistics_way"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_word16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_info"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word15"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_driver_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="王小帅 1234443213"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word16"
        app:layout_constraintTop_toBottomOf="@id/normal_down_logistics_company"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_word17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_number"
        android:textColor="@color/color_6666"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_word16"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_car_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="川A335523"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_3333"
        app:layout_constraintLeft_toRightOf="@id/normal_down_word17"
        app:layout_constraintTop_toBottomOf="@id/normal_down_driver_info"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/normal_down_remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="备注：请一定送货到收货人手里！谢谢！"
        android:textColor="@color/color_3333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_down_car_number"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_f5f1"
        />

</android.support.constraint.ConstraintLayout>