<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_2dp_59ff"
    android:padding="@dimen/dp_10"
    android:layout_marginLeft="@dimen/dp_12"
    android:layout_marginRight="@dimen/dp_12"
    android:layout_marginTop="@dimen/dp_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/sending_data_item"
        layout="@layout/a_common_orders"
        />
    <ImageView
        android:id="@+id/sending_data_select"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:src="@mipmap/select_yes_solid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sending_data_item"
        android:layout_marginTop="@dimen/dp_29"
        />

    <Button
        android:id="@+id/sending_data_print_order"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:text="@string/print_order"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:background="@drawable/shape_5dp_a45b"
        app:layout_constraintRight_toLeftOf="@+id/sending_data_sure_pay"
        app:layout_constraintTop_toBottomOf="@id/sending_data_item"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_5"
        />

    <Button
        android:id="@+id/sending_data_sure_pay"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_30"
        android:text="@string/change_free"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:background="@drawable/shape_5dp_a47f"
        app:layout_constraintRight_toLeftOf="@id/sending_data_send_complete"
        app:layout_constraintTop_toBottomOf="@id/sending_data_item"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_5"
        />
    <Button
        android:id="@+id/sending_data_send_complete"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_30"
        android:text="@string/complete_send"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:background="@drawable/shape_5dp_a45b"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sending_data_item"
        android:layout_marginTop="@dimen/dp_22"
        />

</android.support.constraint.ConstraintLayout>